--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2550,7 +2550,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(155, 241, 255, 0.1);
+			background-color: #b4a57c;
 			box-shadow: inset 0 0 0 2px #53e3fb;
 			color: #53e3fb;
 		}
@@ -2672,7 +2672,7 @@ input, select, textarea {
 		.button.primary {
 			background-color: #ffffff;
 			box-shadow: none;
-			color: #242943;
+			color: #b4a57c;
 		}
 
 			input[type="submit"].primary:hover, input[type="submit"].primary:active,
@@ -2685,7 +2685,7 @@ input, select, textarea {
 			.button.primary:hover,
 			.button.primary:active {
 				background-color: #9bf1ff;
-				color: #242943 !important;
+				color: #b4a57c !important;
 			}
 
 			input[type="submit"].primary:active,
@@ -2942,7 +2942,7 @@ input, select, textarea {
 		-webkit-flex-direction: row;
 		-ms-flex-direction: row;
 		flex-direction: row;
-		background-color: #2e3450;
+		background-color: #5b4635;
 	}
 
 		.spotlights > section > .image {
@@ -3004,7 +3004,7 @@ input, select, textarea {
 			-webkit-flex-direction: row-reverse;
 			-ms-flex-direction: row-reverse;
 			flex-direction: row-reverse;
-			background-color: #333856;
+			background-color: #5b4635;
 		}
 
 			.spotlights > section:nth-child(2n) > .content {
@@ -3082,7 +3082,7 @@ input, select, textarea {
 			-webkit-flex-direction: row;
 			-ms-flex-direction: row;
 			flex-direction: row;
-			background-color: #2e3450;
+			background-color: #605040;
 		}
 
 			.spotlights-about > section > .image {
@@ -3290,7 +3290,7 @@ input, select, textarea {
 				-ms-transition: background-color 0.2s ease-in-out, 0.2s ease-in-out;
 				transition: background-color 0.2s ease-in-out, 0.2s ease-in-out;
 				background-color: #ffffff;
-				color: #242943;
+				color: #b4a57c;
 				display: inline-block;
 				line-height: 1.65em;
 				margin-right: 0.325em;
@@ -3409,7 +3409,7 @@ input, select, textarea {
 			}
 
 			#header.alt.style2 .logo strong {
-				color: #8d82c4;
+				color: #b4a57c;
 			}
 
 			#header.alt.style3 .logo strong {
@@ -3641,7 +3641,7 @@ input, select, textarea {
 		}
 
 		#banner.style2:after {
-			background-color: #8d82c4;
+			background-color: #52452c;
 		}
 
 		#banner.style3:after {
@@ -3736,7 +3736,6 @@ input, select, textarea {
 
 	#main {
 		background: #5b4635;
-		background-color: #2a2f4a;
 	}
 
 		#main > * {
@@ -3764,8 +3763,7 @@ input, select, textarea {
 				}
 
 		#main.alt {
-			background-color: transparent;
-			border-bottom: solid 1px rgba(212, 212, 255, 0.1);
+			background: #5b4635;
 		}
 
 /* Contact */
