--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -172,6 +172,10 @@ input, select, textarea {
 		font-weight: 600;
 	}
 
+	letter {
+		letter-spacing: -2px;
+	}
+
 	em, i {
 		font-style: italic;
 	}
@@ -180,7 +184,18 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h5 {
+		color: #ffffff;
+		font-size: 20pt;
+		margin: 1em 0 .25em 0;
+	}
+	h6 {
+		color: #ffffff;
+		font-size: 16pt;
+		margin: .5em 0 .25em 0;
+	}
+
+	h1, h2, h3, h4{
 		color: #ffffff;
 		font-weight: 600;
 		line-height: 1.65;
@@ -206,14 +221,6 @@ input, select, textarea {
 
 	h4 {
 		font-size: 1.1em;
-	}
-
-	h5 {
-		font-size: 0.9em;
-	}
-
-	h6 {
-		font-size: 0.7em;
 	}
 
 	@media screen and (max-width: 736px) {
@@ -2828,9 +2835,9 @@ input, select, textarea {
 				width: 45%;
 			}
 
-			.tiles article:nth-child(6n), .tiles article:nth-child(6n - 1) {
-				width: 50%;
-				height:25vh;
+			.tiles article:nth-child(5n){
+				width: 100%;
+				height:20em;
 			}
 
 			.tiles article:nth-child(6n - 5):before {
@@ -2957,7 +2964,7 @@ input, select, textarea {
 			.spotlights > section > .image img {
 				border-radius: 0;
 				display: block;
-				width: 100%;
+				width: fit-content;
 			}
 
 			.spotlights > section > .image:before {
@@ -2990,16 +2997,15 @@ input, select, textarea {
 			-ms-align-items: center;
 			align-items: center;
 			padding: 2em 3em 0.1em 3em ;
-			width: 70%;
+			width: 40%;
 		}
 
 			.spotlights > section > .content > .inner {
 				margin: 0 auto;
-				max-width: 100%;
-				width: 65em;
+				width: 100%;
 			}
 
-		.spotlights > section:nth-child(2n) {
+		/*.spotlights > section:nth-child(2n) {
 			-moz-flex-direction: row-reverse;
 			-webkit-flex-direction: row-reverse;
 			-ms-flex-direction: row-reverse;
@@ -3012,8 +3018,8 @@ input, select, textarea {
 				-webkit-align-items: -webkit-flex-end;
 				-ms-align-items: -ms-flex-end;
 				align-items: flex-end;
-			}
-
+			}*/
+/*
 	@media screen and (max-width: 1680px) {
 
 		.spotlights > section > .image {
@@ -3061,8 +3067,7 @@ input, select, textarea {
 			padding: 3em 1.5em 1em 1.5em ;
 		}
 
-	}
-
+	}*/
 /* spotlights-about */
 
 	.spotlights-about {
@@ -3091,25 +3096,22 @@ input, select, textarea {
 				border-radius: 0;
 				display: block;
 				position: relative;
-				width: 30%;
+				max-width: 10px;
 			}
-
+			
 				.spotlights-about > section > .image img {
 					border-radius: 0;
 					display: block;
-					width: 100%;
 				}
 
 				.spotlights-about > section > .image:before {
 					background: rgba(36, 41, 67, 0.9);
 					content: '';
 					display: block;
-					height: 100%;
 					left: 0;
 					opacity: 0;
 					position: absolute;
 					top: 0;
-					width: 100%;
 				}
 
 			.spotlights-about > section > .content {
@@ -3129,15 +3131,16 @@ input, select, textarea {
 				-webkit-align-items: center;
 				-ms-align-items: center;
 				align-items: center;
-				padding: 2em 3em 0.1em 3em ;
-				width: 70%;
+				padding: 2em 0em 0em 3em ;
+				width: 65%;
+				height: fit-content;
 			}
 
 				.spotlights-about > section > .content > .inner {
 					margin: 0 auto;
 					max-width: 100%;
 					width: 65em;
-					height:40em;
+					height: fit-content;
 				}
 
 			.spotlights-about > section:nth-child(2n) {
@@ -3154,7 +3157,7 @@ input, select, textarea {
 					-ms-align-items: -ms-flex-end;
 					align-items: flex-end;
 				}
-
+/*
 		@media screen and (max-width: 1680px) {
 
 			.spotlights-about > section > .image {
@@ -3203,7 +3206,7 @@ input, select, textarea {
 			}
 
 		}
-
+*/
 /* Header */
 
 	@-moz-keyframes reveal-header {
@@ -3766,7 +3769,6 @@ input, select, textarea {
 		#main.alt {
 			background: #5b4635;
 		}
-
 /* Contact */
 
 	#contact {
